Day-60-Ingress-Gateway/backend-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo:1.0.0
        args:
        - "-text={\"status\": 200, \"message\": \"API Backend Reached\"}"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: api
  ports:
  - port: 5678
